Truncate text on post list

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -45,3 +45,10 @@ h1, h2, h3, h4 {
 .post h1 a, .post h1 a:visited {
     color: #000000;
 }
+
+.limited-text {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 300ch;
+}
