--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="post">
         <h1>{{ post.title }}</h1>
-        <p>{{ post.text|linebreaksbr }}</p>
+        <p class="text-justify">{{ post.text|linebreaksbr }}</p>
         {% if post.published_date %}
             <div class="date">
                 {{ post.published_date }}
