--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,7 +4,7 @@
     {% for post in posts %}
         <div class="post">
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-            <p class="text-justify text-truncate limited-text">{{ post.text | linebreaksbr }}</p>
+            <p class="text-justify limited-text">{{ post.text }}</p>
             <div class="date">
                 <p>published: {{ post.published_date }}</p>
             </div>
